Day 52. TypeScript - Props & Data Model

--- a/32.React_TypeScript/01-starting-project/ts-basics/package.json
+++ b/32.React_TypeScript/01-starting-project/ts-basics/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "01-starting-project",
+  "name": "ts-basics",
   "version": "1.0.0",
   "main": "no-typescript.js",
-  "dependencies": {
-    "typescript": "^5.8.2"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "typescript": "^5.8.2"
+  }
 }
